@@ -1,9 +1,19 @@
 # vim: set noexpandtab:
 
+2012-11-14 Steve
+	* Updated SusyD3PDSkimmer
+		* Saving D3PD meta data cutflow tree
+		* Filtering on 3 signal leptons
+	* Added new grid submission script: submit.py
+		* Very handy script with all the beloved features
+		* Should work for all SusyNt submission jobs
+		* Might replace the bash submission scripts
+		* Run with '-h' to see the available options
+
 2012-11-13 Matt
 	* Photons now saved by default (only tight ones, so size should not increase by much).
 	* Updated method in selectSignalPhotons(), but not uncommented. Need update to MultiLep package, wait for Steve
-	
+
 2012-11-12 Steve
 	* Adding methods to SusyD3PDAna for d3pd based analysis
 		* getLepSF, getBTagSF (not done) 
